[package]
name = "newrgb_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", default-features = false, features = ["cookies", "macros", "compress-gzip", "compress-brotli"] }
lazy_static = "1.4.0"
walkdir = "2.5.0"
zip = "0.6.6"
