[package]
name = "newrgb_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "2.1.1"
async-mutex = "1.4.0"
async-walkdir = "1.0.0"
async_zip = { version = "0.0.16", features = ["deflate"] }
futures-lite = "2.3.0"
rocket = "0.5.0"
